test(market): 新增Controller集成测试；修正Service单元测试；新增测试配置